[tool.poetry]
name = "probability-and-statistics"
version = "0.1.0"
description = ""
authors = ["leblancr <rich.leblanc1@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
